--- a/Ecommerce/src/app/carousels/carousels.component.scss
+++ b/Ecommerce/src/app/carousels/carousels.component.scss
@@ -22,6 +22,7 @@
     text-shadow: #000;
     color:#fff;
     border-radius: 2%;
+    z-index: 3;
 }
 .carousel-container img{
     display: none;
@@ -84,7 +85,7 @@
     position: absolute;
     top:0;
     bottom:0;
-    display:flex;
+    display:flex;    
     align-items:center;
     justify-content: center;
     width:15%;
@@ -94,6 +95,7 @@
     background: 0 0 ;
     border: 0;
     cursor: pointer;
+    z-index: 1;
 
 
 }
