--- a/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.html
+++ b/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.html
@@ -29,7 +29,7 @@
       <div class="carousel-item active" >
   
         <div class="row" >
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="card mb-2">
               <img class="card-img-top" src="{{elt[0].photo }}"
                    alt="Card image cap">
@@ -39,12 +39,12 @@
                 <p class="card-text">{{elt[0].description}}</p>
                 
                
-                <a class="btn btn-info" (click)="AjouterPanier(elt[0])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AjouterPanier(elt[0])">Voir Produit</a>
               </div>
             </div>
           </div>
   
-          <div class="col-md-3 clearfix d-none d-md-block">
+          <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
               <img class="card-img-top" src="{{elt[1].photo }}"
                    alt="Card image cap">
@@ -52,13 +52,13 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[1].name}}</h4>
                 <p class="card-text">{{elt[1].description}}</p>
-                <a class="btn btn-info" (click)="AjouterPanier(elt[1])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AjouterPanier(elt[1])">Voir Produit</a>
               
               </div>
             </div>
           </div>
 
-          <div class="col-md-3 clearfix d-none d-md-block">
+     <!--     <div class="col-md-3 clearfix d-none d-md-block">
             <div class="card mb-2">
               <img class="card-img-top" src="{{elt[9].photo }}"
                    alt="Card image cap">
@@ -66,13 +66,13 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[9].name}}</h4>
                 <p class="card-text">{{elt[9].description}}</p>
-                <a class="btn btn-info" (click)="AjouterPanier(elt[9])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AjouterPanier(elt[9])">Voir Produit</a>
               
               </div>
             </div>
           </div>
-  
-          <div class="col-md-3 clearfix d-none d-md-block">
+  -->
+          <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
               <img class="card-img-top" src="{{elt[2].photo }}"
               alt="Card image cap">
@@ -80,7 +80,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[2].name}}</h4>
                 <p class="card-text">{{elt[2].description}}</p>
-                <a class="btn btn-info" (click)="AjouterPanier(elt[2])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AjouterPanier(elt[2])">Voir Produit</a>
               
               </div>
             </div>
@@ -102,7 +102,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[3].name}}</h4>
                 <p class="card-text">{{elt[3].description}}</p>
-                <a class="btn btn-info"  (click)="AjouterPanier(elt[3])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AjouterPanier(elt[3])">Voir Produit</a>
               
               </div>
             </div>
@@ -116,7 +116,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[4].name}}</h4>
                 <p class="card-text">{{elt[4].description}}</p>
-                <a class="btn btn-info"  (click)="AjouterPanier(elt[4])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AjouterPanier(elt[4])">Voir Produit</a>
               
               </div>
             </div>
@@ -130,7 +130,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[5].name}}</h4>
                 <p class="card-text">{{elt[5].description}}</p>
-                <a class="btn btn-info"  (click)="AjouterPanier(elt[5])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AjouterPanier(elt[5])">Voir Produit</a>
               
               </div>
             </div>
@@ -153,7 +153,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[6]?.name}}</h4>
                 <p class="card-text">{{elt[6]?.description}}</p>
-                <a class="btn btn-info"  (click)="AjouterPanier(elt[6])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AjouterPanier(elt[6])">Voir Produit</a>
               
               </div>
             </div>
@@ -167,7 +167,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[7]?.name}}</h4>
                 <p class="card-text">{{elt[7]?.description}}</p>
-                <a class="btn btn-info" (click)="AjouterPanier(elt[7])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AjouterPanier(elt[7])">Voir Produit</a>
               
               </div>
             </div>
@@ -181,7 +181,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{elt[8]?.name}}</h4>
                 <p class="card-text">{{elt[8]?.description}}</p>
-                <a class="btn btn-info"  (click)="AjouterPanier(elt[8])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AjouterPanier(elt[8])">Voir Produit</a>
               
               </div>
             </div>
