--- a/Ecommerce/src/app/header/carousel/carousel.component.scss
+++ b/Ecommerce/src/app/header/carousel/carousel.component.scss
@@ -13,6 +13,10 @@
  .carousel{
   width: 55rem;
  }
-  
+.div1{
+  padding: 4rem;
+  border: 1px solid rgba(128, 128, 128, 0.13);
+  box-shadow: 8px 8px rgba(0, 0, 0, 0.034);
+}
 }
 }
