--- a/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.scss
@@ -1,69 +1,73 @@
-
-.produit_container{
-   width: 100%;
+.produit_container {
+  width: 100%;
   // margin: 20px auto 20px auto;
 
-
-  @media (min-width:400px){
-  .container{
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap:5px;
-    
-    img{
-        height:200px;
-        width:auto;
+  @media (min-width: 400px) {
+    .container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 5px;
     }
-   
+  }
+  @media (min-width: 750px) {
+    .container {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  @media (min-width: 900px) {
+    .container {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+  @media (min-width: 1200px) {
+    .container {
+      grid-template-columns: repeat(5, 1fr);
+    }
+  }
+  .description {
+    height: 90px;
+    overflow: auto;
   }
 }
-@media (min-width:750px){
-  .container{
-    grid-template-columns: repeat(3, 1fr);
-  
-  }
-}
-@media (min-width:900px){
-  .container{
-    grid-template-columns: repeat(4, 1fr);
-  
-  }
-}
-@media (min-width:1200px){
-  .container{
-    grid-template-columns: repeat(5, 1fr); 
-   
-  }
-}
-
-}
-.card-text{
-  height: 90px;
-}
-.price{
+.price {
   display: flex;
   flex-direction: row;
   gap: 4px;
 }
-.produit_annexe{
-    background-color: #fff;   
-    height: 10rem;
-    
-   
-}
-.promo{
+
+.promo {
   text-decoration: line-through;
   color: red;
 }
 
-.promotion{
-  width:100px;
+.promotion {
+  width: 100px;
   height: 30px;
   background-color: red;
-  color:#fff;
- // transform: rotate(-45deg);
-  position:absolute;
+  color: #fff;
+  // transform: rotate(-45deg);
+  position: absolute;
   padding: 4px;
   left: 0px;
-  
+}
+img {
+  height: 200px;
+  width: auto;
+  transition: zoom 2s;
+}
+img:hover {
+  cursor: pointer;
+  transform: scale(1.2, 1.2);
+  z-index: 9;
+}
+fieldset{
+  background-color: rgba(255, 255, 255, 0.637);
+  width: 95%;
+  margin:0 auto;
+ 
+  text-align: center;
+  padding:1rem;
+}
+legend{
+  color:rgb(91, 91, 92);
 }
