--- a/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.scss
@@ -63,11 +63,14 @@ img:hover {
 fieldset{
   background-color: rgba(255, 255, 255, 0.637);
   width: 95%;
-  margin:0 auto;
- 
+  margin:0 auto; 
   text-align: center;
-  padding:1rem;
+  padding-bottom: 15px;
 }
 legend{
   color:rgb(91, 91, 92);
+  background-color: rgba(211, 211, 211, 0.3);
+  padding: 10px;
+  width: 100%;
+
 }
