--- a/Ecommerce/src/app/header/nav/nav.component.html
+++ b/Ecommerce/src/app/header/nav/nav.component.html
@@ -35,7 +35,7 @@
     <button type="button" *ngIf="!islogged" class="btn btn-outline-secondary btn-sm me-2" data-toggle="modal" data-target="#myModal">
       Login
     </button>
-    <button class="btn btn-warning " routerLink="panier" type="submit"><span><i class="fas fa-shopping-cart"></i></span>Panier</button>
+    <button class="btn btn-warning " routerLink="panier" type="submit"><mat-icon>shopping_cart</mat-icon></button>
   
   </div>  
 </nav>
