--- a/Ecommerce/src/app/footer/footer.component.html
+++ b/Ecommerce/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<app-carousel-footer></app-carousel-footer>
+<!--<app-carousel-footer></app-carousel-footer>-->
 
 <div *ngIf="affichemessage" [ngClass]="{'alert alert-success text-center sticky-bottom': messages}">
   {{messages}} <a (click)="AfficherPanier()" [hidden]="messages == ''" class="btn btn-warning m-1">Voir Panier</a></div>
