--- a/Ecommerce/src/app/operation/produit/modif-produit/modif-produit.component.html
+++ b/Ecommerce/src/app/operation/produit/modif-produit/modif-produit.component.html
@@ -63,7 +63,7 @@
       <mat-form-field class="example-full-width"  appearance="fill" >
         <mat-label >Catégorie ?</mat-label>
         <mat-select  [(value)]="produit.categorie"  >            
-        <mat-option value="{{categorie}}" *ngFor="let categorie of categories" >{{categorie}}</mat-option>
+        <mat-option value="{{categorie.name}}" *ngFor="let categorie of categories" >{{categorie.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
