--- a/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.html
@@ -1,32 +1,72 @@
 <app-carousel></app-carousel>
 
 <div class="produit_container mb-5">
-  <div *ngFor="let level of categorie; let i = index">
-    
+  <div *ngFor="let produitpercategorie of categorie; let i = index">
+
     <fieldset>
-      <legend>{{level[0]?.categorie}}</legend>
-  
-  <div class="container">
-      <div class="card" *ngFor="let produit of level; let i =index">
-       
+      <legend>{{produitpercategorie[0]?.categorie}}</legend>
+
+      <div class="containers">
+     <!--   <div class="card" *ngFor="let produit of produitpercategorie; let i =index">
+
           <img src="{{produit?.photo}}" class="card-img-top" alt="photo {{produit.name}}">
           <div *ngIf="produit.discount != 0" class="promotion">PROMOTION</div>
           <div class="card-body">
             <h5 class="card-title">{{produit.name | titlecase}}</h5>
             <p class="card-text description">{{produit.description}}</p>
-         <div class="price">
-          <div><p [ngClass]="{'card-text-prix promo': produit.discount > 0}">{{produit.prix}} DH</p></div>
-          <div><p *ngIf="produit.discount > 0">{{getDiscount(produit)}} DH</p></div>
-         </div>  
-          
-           
+            <div class="price">
+              <div>
+                <p [ngClass]="{'card-text-prix promo': produit.discount > 0}">{{produit.prix}} DH</p>
+              </div>
+              <div>
+                <p *ngIf="produit.discount > 0">{{getDiscount(produit)}} DH</p>
+              </div>
+            </div>
             <a class="btn btn-outline-secondary btnvoir btn-md w-100" (click)="AjouterPanier(produit)">Voir</a>
           </div>
-        
-      </div>
+
+       
+      </div>-->
+      <owl-carousel-o [options]="produitOptions">
+
+        <ng-container *ngFor="let produit of produitpercategorie; let i =index">
+          <ng-template carouselSlide [id]="produit._id">
+            
+            <div class="card" >
+              <img src="{{produit?.photo}}" class="card-img-top" alt="photo {{produit.name}}">
+              <div *ngIf="produit.discount != 0" class="promotion">-{{produit.discount}}%</div>
+              <div class="card-body">
+                <h5 class="card-title">{{produit.name | titlecase}}</h5>
+                <p class="card-text description">{{produit.description}}</p>
+                <div class="price">
+                  <div>
+                    <p [ngClass]="{'card-text-prix promo': produit.discount > 0}">{{produit.prix}} DH</p>
+                  </div>
+                  <div>
+                    <p *ngIf="produit.discount > 0">{{getDiscount(produit)}} DH</p>
+                  </div>
+                </div>
+                <a class="btn btn-outline-secondary btnvoir btn-md w-100" (click)="AjouterPanier(produit)">Voir</a>
+              </div>    
+            </div>
+          </ng-template>
+        </ng-container>
+    
+      </owl-carousel-o>
     </div>
-  </fieldset>
+    </fieldset>
+
   </div>
-  
-  
-  </div>
+  <br>
+
+  <owl-carousel-o [options]="customOptions">
+
+    <ng-container *ngFor="let slide of listProduit">
+      <ng-template carouselSlide [id]="slide._id">
+        <img class="carouselimg" [src]="slide.photo" [alt]="slide.name" [title]="slide.name" (click)="AjouterPanier(slide)">
+      </ng-template>
+    </ng-container>
+
+  </owl-carousel-o>
+
+</div>
