--- a/Ecommerce/src/app/operation/table-data/table-data.component.html
+++ b/Ecommerce/src/app/operation/table-data/table-data.component.html
@@ -13,7 +13,7 @@
      <!-- Photo Column -->
      <ng-container matColumnDef="photo">
       <th mat-header-cell *matHeaderCellDef >Photo</th>
-      <td mat-cell *matCellDef="let row"><img src='{{row.photo}}' alt="{{row.name}}"></td>
+      <td mat-cell *matCellDef="let row"><img src='assets/img/upload/{{row.photo}}' alt="{{row.name}}"></td>
     </ng-container>
 
     <!-- Name Column -->
