--- a/Ecommerce/src/app/produit/panier/panier.component.html
+++ b/Ecommerce/src/app/produit/panier/panier.component.html
@@ -32,6 +32,7 @@
        
       </div>
     </div>
+    <!--Panier-->
     <div class="col-md-3 panier" *ngIf="message != 'vide'">
 
        <div>
@@ -52,7 +53,7 @@
           <p class="col-md-7 mt-3">Total(incl. TVA) </p><p class="col-md-5 mt-3">{{sommeGeneral+shipping}} </p>
         </div>
       </div>
-      <button type="button" class="btn btn-success btn-lg m-3 float-end" (click)="commander()" data-toggle="modal" data-target="#myModal">
+      <button type="button" class="btn btn-success btn-lg mt-3 w-100" (click)="commander()" data-toggle="modal" data-target="#myModal">
         Commander
       </button>
     </div>
@@ -86,7 +87,7 @@
         
         <!-- Modal body -->
         <div class="modal-body">
-          
+         <ng-container *ngIf="isConnected">
           <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" value="{{client.email}}" placeholder="name@example.com">
             <label for="floatingInput">Email</label>
@@ -103,8 +104,7 @@
             <input type="text" class="form-control" id="floatingrefAdresse" value="{{client.reference}}" placeholder="Réference Adresse">
             <label for="floatingrefAdresse">Réference Adresse</label>
           </div>
-
-
+        </ng-container> 
 
 
         </div>
