--- a/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.html
@@ -1,10 +1,10 @@
 <app-carousel></app-carousel>
 
-<div class="produit_container mb-5">
+<div class="produit_container mb-5" *ngIf="categorie.length != 0">
 
 
 
-  <div class="containers">
+  <div class="containers" >
     <h4>Promotion</h4>
     <owl-carousel-o [options]="customOptions">
       <ng-container *ngFor="let produit of promotion; let i =index">
@@ -34,13 +34,12 @@
   </div>
 
 
-
   <div *ngFor="let produitpercategorie of categorie; let i = index">
 
     <fieldset>
-      <legend>{{produitpercategorie[0]?.categorie}}</legend>
+      <legend *ngIf="produitpercategorie[0]?.categorie">{{produitpercategorie[0]?.categorie}}</legend>
 
-      <div class="containers">
+      <div>
     
       <owl-carousel-o [options]="produitOptions">
         <ng-container *ngFor="let produit of produitpercategorie; let i =index">
