--- a/Ecommerce/src/app/header/nav/nav.component.scss
+++ b/Ecommerce/src/app/header/nav/nav.component.scss
@@ -1,9 +1,10 @@
-.active{
-    color:aliceblue;
+.logo {
+  max-width: 60px;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  padding: 3px;
 }
-.non-active{
-    color:gray;
-}
-li{
-    color:aliceblue;
+a{
+color:#fff;
 }
