--- a/Ecommerce/src/app/produit/details-produit/details-produit.component.scss
+++ b/Ecommerce/src/app/produit/details-produit/details-produit.component.scss
@@ -2,78 +2,41 @@
 
 @media (min-width:900px) {
 
-   .container_details{        
+   .container_details{     
+    display: flex;   
     background-color: #fff;
     padding: 20px;
     width: 95%;
     margin: auto;
 
 
-    display: flex;
     label{
         font-size: 24px;
     }
    
 
    img{
-    height: 250px;
+    max-width: 100%;
+    height: 267px;
+    border-radius: 5%;
    }
    
      }
     
 }
-/*
-h5{
-    margin: 15px;
-}
-.text{
-    font-size: 24px;
-    font-weight: bold;
-}
-.card{
-    height: 40vh;
-    
 
-    img{
-        width:36vh;
-        height: 35vh;
-        padding: 5px;
-        border-radius: 5%;
-    }
-    .card-title{
-        font-size: 24px;
-        padding: 0;
-
-
-    }
-    .card-text{
-        font-size: 20px;
-        font-weight: bold;
-    }
-    .text-muted{
-        font-size: medium;
-    }
-    .prix{
-        font-size: 30px;
-        font-weight: bold;
-    }
-    
-}
-*/
-.promo{
-    color:red;
-}
-
-.promotion{
-    width:100px;
-    height: 30px;
+.promotion {
+    width: 45px;
+    height: 60px;
     background-color: red;
-    color:#fff;
-   // transform: rotate(-45deg);
-    position:absolute;
-    padding: 4px;
-   // margin: 40px;
-    left: 0px;
-    top:0px;
-    
+    color: #fff;
+    // transform: rotate(-45deg);
+    position: absolute;
+    border-radius: 0 0 25% 25%; 
+    left: 10px;
+    top:-5px;  
+    text-align: center;
+    font-size: 18px;
+    padding-top: 15px;
+    z-index: 6;
   }
