--- a/Ecommerce/src/app/operation/produit/modalmodifproduit/modalmodifproduit.component.html
+++ b/Ecommerce/src/app/operation/produit/modalmodifproduit/modalmodifproduit.component.html
@@ -48,7 +48,7 @@
                         <option value="oui">Oui</option>
                         <option value="non">Non</option>
                     </select>
-
+                    <mat-hint>Si oui, apparait sur slide show</mat-hint>
                 </div>
             </div>
 
@@ -65,7 +65,7 @@
                 <div class="col-md-6">
                     <label>Discount</label>
                     <input type="number" class="form-control" [(ngModel)]="data.produit.discount" name="discount">
-
+                    <mat-hint>Si > 0, apparait dans promotion</mat-hint>
                 </div>
             </div>
             <div class="row mb-3">
