--- a/Ecommerce/src/app/produit/panier/panier.component.html
+++ b/Ecommerce/src/app/produit/panier/panier.component.html
@@ -1,7 +1,7 @@
 
-<button class="btn btn-outline-primary mx-5 mb-5 mt-3" (click)="onBack()">Ajouter Produit</button>
+<button class="btn btn-outline-primary mx-5 mb-2 mt-3" (click)="onBack()">Ajouter Produit</button>
 
-<div class="container mb-5">
+<div class="containers mb-5">
     
   <div class="row">
    <!-- <span *ngIf="message !=''" class="alert alert-warning text-center"><h3>{{message}}</h3></span>-->
