--- a/Ecommerce/src/app/operation/produit/produit.component.html
+++ b/Ecommerce/src/app/operation/produit/produit.component.html
@@ -1,4 +1,111 @@
 
+
+        <div class="container">
+          <h3>Opération Produit</h3>
+      
+          <button mat-raised-button color="accent" class="float:end" *ngIf="!display"
+              (click)="displayAddForm()"><mat-icon>add</mat-icon></button>
+          <button mat-raised-button color="accent" *ngIf="display"
+              (click)="hideAddForm()"><mat-icon>remove</mat-icon></button>
+      
+      
+          <div class="containers" [hidden]="!display">
+            <p [ngClass]="{'alert alert-info m-3 text-center':message}">{{message}}</p>
+            <p [ngClass]="{'alert alert-info m-3 text-center':messages}">{{messages}}</p>
+              <form [formGroup]="addform" (ngSubmit)="submit()">
+                  <h4>Ajouter Produit</h4>
+                  <mat-grid-list cols="2" rowHeight="85px">
+                      <mat-grid-tile colspan="2">
+                          <input type="file" required formControlName="photo" (change)="onFileUpload($event)"
+                              class="form-control" id="photo" name="photo" formenctype="multipart/form-data">
+      
+                      </mat-grid-tile>
+                       <mat-grid-tile colspan="2" *ngIf="newphoto">
+                          <div><img src="{{newphoto}}" alt="new photo" class="modifphoto"></div>
+                          
+                      </mat-grid-tile>
+                     
+                      <mat-grid-tile>
+                          <mat-form-field appearance="fill">
+                              <mat-label>Nom</mat-label>
+                              <input matInput type="text" name="name" formControlName="name">
+                          </mat-form-field>
+                      </mat-grid-tile>
+                      <mat-grid-tile>
+                          <mat-form-field appearance="fill">
+                              <mat-label>Prix</mat-label>
+                              <input matInput type="number" name="prix" formControlName="prix">
+                          </mat-form-field>
+                      </mat-grid-tile>
+                      <mat-grid-tile>
+                          <!-- 
+                      <mat-form-field appearance="fill">
+                          <mat-label>Allergène</mat-label>
+                          <mat-select [formControl]="toppings" multiple  formControlName="allergene">
+                              <mat-select-trigger>
+                                  {{toppings.value?.[0] || ''}}
+                                  <span *ngIf="(toppings.value?.length || 0) > 1" class="example-additional-selection">
+                                      (+{{(toppings.value?.length || 0) - 1}} {{toppings.value?.length === 2 ? 'other' :
+                                      'others'}})
+                                  </span>
+                              </mat-select-trigger>
+                              <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+                          </mat-select>
+                      </mat-form-field>
+                 
+              -->
+                          <mat-form-field appearance="fill">
+                              <mat-label>Allergène</mat-label>
+                              <mat-select multiple formControlName="allergene">
+                                  <mat-option *ngFor="let element of allergeneList" [value]="element">{{element}}</mat-option>
+                              </mat-select>
+                          </mat-form-field>
+                      </mat-grid-tile>
+                      <!--<p>Allergène: {{selected}}</p>-->
+      
+                      <mat-grid-tile>
+                          <mat-form-field appearance="fill">
+                              <mat-label>Favori</mat-label>
+                              <mat-select name="favori" formControlName="favori" name="favori">
+                                  <mat-option value="oui">Oui</mat-option>
+                                  <mat-option value="non">Non</mat-option>
+                              </mat-select>
+                              <mat-hint>Si oui, apparait sur slide show</mat-hint>
+                          </mat-form-field>
+                      </mat-grid-tile>
+                      <mat-grid-tile>
+                          <mat-form-field appearance="fill">
+                              <mat-label>Catégorie</mat-label>
+                              <mat-select formControlName="categorie" name="categorie">
+                                  <mat-option *ngFor="let categorie of listCategorie; let i=index" [value]="categorie.name">
+                                      {{categorie.name}}
+                                  </mat-option>
+                              </mat-select>
+                          </mat-form-field>
+                      </mat-grid-tile>
+                      <mat-grid-tile>
+                          <mat-form-field appearance="fill">
+                              <mat-label>Discount</mat-label>
+                              <input matInput type="number" name="discount" formControlName="discount">
+                              <mat-hint>Si > 0, apparait dans promotion</mat-hint>
+                          </mat-form-field>
+                      </mat-grid-tile>
+                      <mat-grid-tile colspan="2">
+                          <mat-form-field appearance="fill">
+                              <mat-label>Description</mat-label>
+                              <textarea matInput #messagetext maxlength="80" placeholder="Ex. Savoureux..."
+                                  formControlName="description" name="description"></textarea>
+                              <mat-hint align="end">{{messagetext.value.length}} / 80</mat-hint>
+                          </mat-form-field>
+                      </mat-grid-tile>
+                  </mat-grid-list>
+                  <button mat-raised-button color="warn" class="btnsubmit" [disabled]="addform.invalid">
+                      Ajouter un produit
+                  </button>
+              </form>
+             
+          </div>
+      
 <div class="container">
   
   <mat-form-field>
