--- a/Ecommerce/src/app/operation/produit/produit.component.scss
+++ b/Ecommerce/src/app/operation/produit/produit.component.scss
@@ -1,10 +1,4 @@
-/*.mat-tab-group {
-  margin-bottom: 48px;
-}
 
-h3{
-  margin: 20px;
-}*/
 /* Structure */
 table {
   width: 100%;
@@ -29,4 +23,33 @@ td{
 .operation{
   display:flex;
   gap:3px;
+}
+.example-additional-selection {
+  opacity: 0.75;
+  font-size: 0.75em;
+}
+
+mat-form-field{
+  width: 100%;
+  padding: 5px;
+}
+.containers{
+  width:50%;
+  margin: 0 auto 10px;
+  background-color: #fff;
+  padding:1rem;
+  
+}
+h3{
+  padding: 5px;
+}
+.btnsubmit{
+  width:100%;
+  padding-top: 3px;
+}
+.modifphoto{
+  width: 200px;
+  height: 200px;
+  padding: 1rem;
+  margin: 0 auto;
 }
