--- a/Ecommerce/src/app/produit/categorie-produit/categorie-produit.component.html
+++ b/Ecommerce/src/app/produit/categorie-produit/categorie-produit.component.html
@@ -18,7 +18,7 @@
          </div>  
           
            
-            <a class="btn btn-outline-secondary w-100 btn-md" (click)="AjouterPanier(produit)">Voir</a>
+            <a class="btn btn-outline-secondary w-100 btn-md" (click)="AfficherDetailsProduit(produit)">Voir</a>
           </div>
         
       
