--- a/Ecommerce/src/app/produit/details-produit/details-produit.component.html
+++ b/Ecommerce/src/app/produit/details-produit/details-produit.component.html
@@ -31,7 +31,7 @@
                 <button class="btn btn-outline-info me-2" (click)="Dcounter()">-</button>{{count}}<button class="btn btn-outline-info mx-2" (click)="counter()">+</button>
                 <label class="alert alert-light mx-3">Prix : {{produit.prix*count}} Dhs</label></p>
                             
-              <button class="btn btn-primary btn-lg w-100" (click)="AjoutPanier(produit)">Ajouter au panier</button>
+              <button class="btn btn-warning btn-lg w-100" (click)="AjoutPanier(produit)">Ajouter au panier</button>
            
               
                </div>
