--- a/Ecommerce/src/app/produit/panier/panier.component.html
+++ b/Ecommerce/src/app/produit/panier/panier.component.html
@@ -1,121 +1,132 @@
-
 <button class="btn btn-outline-primary mx-5 mb-2 mt-3" (click)="onBack()">Ajouter Produit</button>
 
 <div class="containers mb-5">
-    
+
   <div class="row">
-   <!-- <span *ngIf="message !=''" class="alert alert-warning text-center"><h3>{{message}}</h3></span>-->
-   <div  class="alert alert-primary"><h3>Panier ({{nbr_article}}) {{message}}</h3></div>
-   <div class="col-md-9">   
- 
-     <div class="card text-bg m-1" *ngFor="let produit of panier; let i =index">
+    <!-- <span *ngIf="message !=''" class="alert alert-warning text-center"><h3>{{message}}</h3></span>-->
+    <div class="alert alert-primary">
+      <h3>Panier ({{nbr_article}}) {{message}}</h3>
+    </div>
+    <div class="col-md-9">
+
+      <div class="card text-bg m-1" *ngFor="let produit of panier; let i =index">
         <div class="row g-0">
           <div class="col-md-2">
             <img src="{{produit.photo}}" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-6">
             <div class="card-body">
-             
               <h5 class="card-title">{{produit.name | titlecase}} </h5>
               <p class="card-text"><small class="text-muted">{{produit.description}}</small></p>
-               </div>
+            </div>
           </div>
           <div class="col-md-4">
             <div class="card-body">
-             <p class="card-text text-muted float-start">{{produit.prix}} * {{produit.nbr}} Dhs <br>Discount(%): {{produit.discount}}</p>
-             <button class="btn btn-danger float-end" aria-label="send" (click)="supprimer(i)">-</button>
-           
-               </div>
+              <p class="card-text text-muted float-start">{{produit.prix}} * {{produit.nbr}} Dhs <br>Discount(%):
+                {{produit.discount}}</p>
+              <button class="btn btn-danger float-end" aria-label="send" (click)="supprimer(i)">-</button>
+
+            </div>
           </div>
-         
+
         </div>
-       
+
       </div>
     </div>
     <!--Panier-->
     <div class="col-md-3 panier" *ngIf="message != 'vide'">
 
-       <div>
+      <div>
         <h5 class="alert-heading">RESUME PANIER (DHS)</h5>
         <hr>
-       
-        <div class="row alert-primary card-text">
-          <p class="col-md-8 mt-3">Sous-total </p><p class="col-md-4 mt-3">{{sommeGeneral }} </p>
-       
-          <p class="col-md-8 mt-3">Frais de livraison </p><p class="col-md-4 mt-3">{{shipping}}</p>
-        </div>
-        <div class="row alert-primary pt-3">
-          <p class="col-md-12"><input  type="text" class="form-control" (click)="RecupAllergene($event)" placeholder="Allèrgene"></p>
-          <p class=" col-md-12 messagePromo"><input  type="text" class="form-control" (mousemove)="RecupPromoCode($event)" placeholder="Code promo">{{messagePromo}}</p>
-                </div>
 
         <div class="row alert-primary card-text">
-          <p class="col-md-7 mt-3">Total(incl. TVA) </p><p class="col-md-5 mt-3">{{sommeGeneral+shipping}} </p>
+          <p class="col-md-8 mt-3">Sous-total </p>
+          <p class="col-md-4 mt-3">{{sommeGeneral }} </p>
+
+          <p class="col-md-8 mt-3">Frais de livraison </p>
+          <p class="col-md-4 mt-3">{{shipping}}</p>
+        </div>
+        <div class="row alert-primary pt-3">
+          <p class="col-md-12"><input type="text" class="form-control" (click)="RecupAllergene($event)"
+              placeholder="Allèrgene"></p>
+          <p class=" col-md-12 messagePromo"><input type="text" class="form-control"
+              (mousemove)="RecupPromoCode($event)" placeholder="Code promo">{{messagePromo}}</p>
+        </div>
+
+        <div class="row alert-primary card-text">
+          <p class="col-md-7 mt-3">Total(incl. TVA) </p>
+          <p class="col-md-5 mt-3">{{sommeGeneral+shipping}} </p>
         </div>
       </div>
-      <button type="button" class="btn btn-success btn-lg mt-3 w-100" (click)="commander()" data-toggle="modal" data-target="#myModal">
+      <button type="button" class="btn btn-success btn-lg mt-3 w-100" (click)="commander()" data-toggle="modal"
+        data-target="#myModal">
         Commander
       </button>
     </div>
-    </div>    
-
-   
+  </div>
 
 
 
 
 
-      
-
-      <!--Modal-->
 
 
 
-     
-  
+
+  <!--Modal-->
+
+
+
+
+
 
   <!-- The Modal -->
   <div class="modal" id="myModal">
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
       <div class="modal-content">
-      
+
         <!-- Modal Header -->
         <div class="modal-header">
           <h4 class="modal-title">Infos Client</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        
+
         <!-- Modal body -->
         <div class="modal-body">
-         <ng-container *ngIf="isConnected">
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" value="{{client.email}}" placeholder="name@example.com">
-            <label for="floatingInput">Email</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="tel" class="form-control" id="floatingtel" value="{{client.tel}}" placeholder="Téléphone">
-            <label for="floatingtel">Téléphone</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingAdresse" value="{{client.adresse}}" placeholder="Adresse">
-            <label for="floatingAdresse">Adresse</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingrefAdresse" value="{{client.reference}}" placeholder="Réference Adresse">
-            <label for="floatingrefAdresse">Réference Adresse</label>
-          </div>
-        </ng-container> 
+          <ng-container *ngIf="isConnected">
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="floatingInput" value="{{client.email}}"
+                placeholder="name@example.com">
+              <label for="floatingInput">Email</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="tel" class="form-control" id="floatingtel" value="{{client.tel}}" placeholder="Téléphone">
+              <label for="floatingtel">Téléphone</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="floatingAdresse" value="{{client.adresse}}"
+                placeholder="Adresse">
+              <label for="floatingAdresse">Adresse</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="floatingrefAdresse" value="{{client.reference}}"
+                placeholder="Réference Adresse">
+              <label for="floatingrefAdresse">Réference Adresse</label>
+            </div>
+          </ng-container>
 
 
         </div>
-        
+
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-succes me-5" data-dismiss="modal">Enregistrer</button><button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-succes me-5" data-dismiss="modal">Enregistrer</button><button
+            type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
-        
+
       </div>
     </div>
   </div>
-  
+
 </div>
