change on panier code

--- a/Ecommerce/src/app/footer/footer.component.html
+++ b/Ecommerce/src/app/footer/footer.component.html
@@ -68,7 +68,7 @@
             </h6>
             <div *ngFor="let list of menu">
               <p>
-                <a href="categorie/{{list}}" class="text-reset">{{list}}</a>
+                <a routerLink="categorie/{{list}}" class="text-reset">{{list}}</a>
               </p>
             </div>
             
