--- a/Ecommerce/src/app/header/search/modal.component.scss
+++ b/Ecommerce/src/app/header/search/modal.component.scss
@@ -4,11 +4,13 @@
   background: #fff;
   position: absolute;
   top:10px;
+  right: 0;
   border-radius: 8px;
   padding: 2rem;
   animation: custom-dialog-enter 1s ease;
   font-size: small;
-  height: 38rem;
+  width:90%;
+  height: 35rem;
   overflow: scroll;
   }
   
@@ -23,11 +25,28 @@
   }
 
 img{
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 250px;
+  border-radius: 5%;
 }
 .box{
   border: 1px solid rgba(128, 128, 128, 0.171);
   padding: 10px;
   //box-shadow: 5px 10px #888888b9;
+}
+
+.promotion {
+  width: 45px;
+  height: 60px;
+  background-color: red;
+  color: #fff;
+  // transform: rotate(-45deg);
+  position: absolute;
+  border-radius: 0 0 25% 25%; 
+  left: 10px;
+  top:-5px;  
+  text-align: center;
+  font-size: 18px;
+  padding-top: 15px;
+  z-index: 6;
 }
