--- a/Ecommerce/src/app/produit/panier/panier.component.html
+++ b/Ecommerce/src/app/produit/panier/panier.component.html
@@ -11,10 +11,11 @@
 
       <div class="card text-bg m-1" *ngFor="let produit of panier; let i =index">
         <div class="row g-0">
-          <div class="col-md-2">
+          <div class="col-md-4">
             <img src="{{produit.photo}}" class="img-fluid rounded-start" alt="...">
+            <div *ngIf="produit.discount != 0" class="promotion">-{{produit.discount}}%</div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="card-body">
               <h5 class="card-title">{{produit.name | titlecase}} </h5>
               <p class="card-text"><small class="text-muted">{{produit.description}}</small></p>
@@ -22,9 +23,14 @@
           </div>
           <div class="col-md-4">
             <div class="card-body">
-              <p class="card-text text-muted float-start">{{produit.prix}} * {{produit.nbr}} Dhs <br>Discount(%):
-                {{produit.discount}}</p>
-              <button class="btn btn-danger float-end" aria-label="send" (click)="supprimer(i)">-</button>
+             
+              <label class="alert alert-light card-text text-muted float-start mx-3" *ngIf="produit.discount">
+               <label style="text-decoration: line-through;color:brown">{{produit.prix}} </label> 
+                {{produit.prix-produit.prix*produit.discount/100}} * {{produit.nbr}} Dhs</label>
+             
+                <label class="alert alert-light card-text text-muted float-start mx-3" *ngIf="!produit.discount">
+                 {{produit.prix}} * {{produit.nbr}} Dhs</label>
+                <button class="btn btn-danger float-end" aria-label="send" (click)="supprimer(produit)">-</button>
 
             </div>
           </div>
